# open-llms-play-pokemon

./: .gitignore  CLAUDE.md  MIGRATION_SUMMARY.md  MLFLOW3_MIGRATION.md  README_pokemon_evaluator.md  biome.jsonc  check.sh  environment.json  pokemon_red_dspy_evaluator.py  pyproject.toml  test_mlflow3_migration.py  unified_tile_system_README.md
.cursor/rules/: dspy.mdc
.github/workflows/: claude.yml
captures/: gamestate_20250620_110159.json  gamestate_20250620_110202.json  gamestate_20250620_110204.json  gamestate_20250620_110206.json
examples/: unified_tile_data_example.py
game/: init.state  map_names.json
inference/: llm_server.py
mlflow/: get_experiments.py  get_runs.py  get_traces.py
open-llms-play-pokemon/: DSPY_METRICS_README.md  action_parser.py  dspy_evaluation_example.py  dspy_metrics.py  game_emulator.py  integrated_dspy_evaluation.py  main.py  main_dspy.py  simple_test.py  single_turn_evals.py  test_action_parser.py  test_dspy_metrics.py  tools.py
open-llms-play-pokemon/evaluators/: pokemon_red_evaluator.py
open-llms-play-pokemon/game_state/: __init__.py  game_state.py  memory_reader.py
open_llms_play_pokemon/: mcp_server.py  run_interactive.py
open_llms_play_pokemon/agents/: dspy_pokemon_model.py  log_models_mlflow3.py  main.py  main_dspy.py  main_dspy_mlflow3.py  openai_pokemon_model.py  re_act.py
open_llms_play_pokemon/emulation/: action_parser.py  game_emulator.py
open_llms_play_pokemon/game_state/: CLAUDE.md  __init__.py  consolidated_state.py  enhanced_tile_creator.py  game_state.py  game_state_parsing.py  memory_reader.py  screen_analyzer.py  tile_data.py  tile_data_factory.py  tile_property_detector.py  tile_reader.py
open_llms_play_pokemon/game_state/data/: __init__.py  memory_addresses.py  tile_data_constants.py
open_llms_play_pokemon/tools/: __init__.py  visualize_tiles.py
open_llms_play_pokemon/visualization/: __init__.py  interactive_tile_visualizer.py
plans/: action-parsing-implementation.md  dspy-trace-ui-implementation.md  tile-extraction-system-implementation.md  tile_analysis.md
server/: llama_server.py  llm_server.py
tests/: conftest.py  test_action_parser.py  test_dspy_implementation.py  test_enhanced_tile_creator.py  test_game_state.py  test_game_state_regression.py  test_get_game_state.py  test_integration_memory_reader.py  test_interactive_tile_visualizer.py  test_re_act.py  test_screen_analyzer.py  test_tile_reader.py  test_unified_tile_data.py  test_warp_grid_output.py  test_warp_tile_classification.py
tests/fixtures/: all_directions_available.state
ui/: CLAUDE.md  package.json  pnpm-lock.yaml
ui/app/: MLFlowClient.ts  app.css  root.tsx
ui/app/captures/: Capture.types.ts  Captures.ts
ui/app/components/: AnnotatedScreenshot.tsx  BoxContainer.tsx  CapturesNav.tsx  ExperimentsNav.tsx  GameDataPane.tsx  GameDataViewer.tsx  MetricsDisplay.tsx  ScreenshotGallery.tsx  ScreenshotSlider.tsx  ScreenshotsPane.tsx  TileDetailsBox.tsx  TracePane.tsx  TraceViewer.tsx  TracesNav.tsx
ui/app/game-state/: GameState.types.ts  GameStates.ts
ui/app/mcp/: McpClient.ts
ui/app/mflow/: MLFlowClient.ts  MLFlowTraces.ts
ui/app/routes/: _index.tsx  api.game-state.ts  api.mlflow.artifact.ts  captures.$captureId.tsx  captures._index.tsx  home.tsx  run.$runId.tsx
(+3 files in other folders)
