[project]
name = "open-llms-play-pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.10, < 3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "pyboy>=2.6.0",
]

[dependency-groups]
dev = [
    "modal>=1.0.2",
]
