[project]
name = "open-llms-play-pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.10, < 3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "pyboy>=2.6.0",
    "dspy>=3.0.0b1",
    "tabulate>=0.9.0",
    "mlflow==3.1.0",
    "fastmcp>=2.8.1",
]

[dependency-groups]
dev = ["modal>=1.0.2", "pytest>=8.4.0", "ruff>=0.8.0", "pyright>=1.1.400"]


[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["build", "game"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"] # Allow module level imports not at top in test files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["open_llms_play_pokemon", "inference", "tests"]
exclude = ["build", "game", ".venv"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
# Allow tests to import from open_llms_play_pokemon as if it were on the path
extraPaths = ["./open_llms_play_pokemon"]

[tool.pytest.ini_options]
# Test configuration
testpaths = ["tests"]
# Ignore problematic test files that have external dependencies or known issues
addopts = ["--ignore=tests/test_re_act.py", "--ignore=worktrees/"]
